--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap');
       *{
         margin: 0;
         padding: 0;
